# balatro-mod-manager

./: +  .gitignore  .npmrc  .prettierignore  AGENTS.md  Cargo.toml  Makefile  README.md  Taskfile.yml  eslint.config.js  justfile  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  notarize-release.yml  release.yml
.signpath/policies/balatro-mod-manager/: test-signing.yml
scripts/: install.ps1  install.sh
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/balatro-mod-manager/: Cargo.toml
src-tauri/balatro-mod-manager/src/: balamod.rs  dependencies.rs  finder.rs  lib.rs
src-tauri/bmm-lib/: Cargo.toml  build.rs
src-tauri/bmm-lib/src/: balamod.rs  cache.rs  database.rs  discord_rpc.rs  errors.rs  finder.rs  installer.rs  lib.rs  local_mod_detection.rs  logging.rs  lovely.rs  mod_collections.rs  smods_installer.rs
src-tauri/bundled_dylibs/: liblovely.dylib
src-tauri/capabilities/: default.json
src-tauri/icons/: convert.py  icon.icns
src-tauri/lovely-injector/: Cargo.toml
src-tauri/lovely-injector/crates/lovely-core/: Cargo.toml
src-tauri/lovely-injector/crates/lovely-core/src/: chunk_vec_cursor.rs  lib.rs  sys.rs
src-tauri/lovely-injector/crates/lovely-core/src/patch/: module.rs
src-tauri/lovely-injector/crates/lovely-mac/: Cargo.toml  build.rs
src-tauri/lovely-injector/crates/lovely-win/: Cargo.toml  build.rs
src-tauri/lovely-injector/crates/lovely-win/src/: lib.rs
src-tauri/src/: general.rs  github_repo.rs  lib.rs  main.rs  models.rs  state.rs  thumb_queue.rs  util.rs
src-tauri/src/commands/: cache.rs  detection.rs  import.rs  install.rs  lovely.rs  mod.rs  mods.rs  paths.rs  repo.rs  report.rs  settings.rs  system.rs  thumbnails.rs
src/components/: BalatroPicker.svelte  DragDropOverlay.svelte  LaunchAlertBox.svelte  LaunchButton.svelte  LovelyMissingPopup.svelte  MessageStack.svelte  ModSwitch.svelte  ModSwitch.svelte.old  PathSelector.svelte  ReportIssue.svelte  RequiresPopup.svelte  SecurityPopup.svelte  ShaderBackground.svelte  UninstallDialog.svelte  UpdateAvailablePopup.svelte  WarningPopup.svelte
src/components/common/: LazyImage.svelte
src/components/viewblock/: About.svelte  LocalModCard.svelte  ModCard.svelte  ModView.svelte  Mods.svelte  SearchView.svelte  Settings.svelte
src/lib/: stores.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/main/: +page.svelte
src/stores/: modCache.ts  modStore.ts  ui.ts  update.ts
src/utils/: helpers.ts  image-cache.ts  performReindexMods.ts  tauriInvoke.ts
static/: image-popup.html  image-popup.html.old
tests/: helpers.rs
version_updater/: README.md  files_list.txt  fpm.toml
version_updater/app/: main.f90
version_updater/src/: version_updater.f90
