[package]
name = "bmm-lib"
version = "0.2.8"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
chrono = "0.4.41"
dirs = "6.0.0"
discord-rich-presence = "1.0.0"
env_logger = "0.11.8"
flate2 = { version = "1.1.2", default-features = false, features = [
	"rust_backend",
] }
infer = "0.19.0"
lazy_static = "1.5.0"
libc = "0.2.175"
libflate = "2.1.0"
log = "0.4.27"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
serde_repr = "0.1.20"
tar = "0.4.44"
tauri = "2.8.5"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["full"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.21.0"
scopeguard = "1.2.0"
mockito = "1.7.0"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
rstest = "0.26.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
sysinfo = "0.37.0"

[target.'cfg(unix)'.dependencies]
libproc = "0.14.10"
home = "0.5.11"
# libloading = "0.8.6"

[build-dependencies]
dirs = "6.0.0"
