[package]
name = "lovely-core"
version = "0.6.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
getargs = "0.5.0"
libc = "0.2.169"
libloading = "0.8.6"
once_cell = "1.20.2"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
walkdir = "2.5.0"
wildmatch = "2.4.0"
log = "0.4.25"
regex-cursor = "0.1.4"
regex-lite = "0.1.6"
chrono = "0.4.39"
serde_ignored = "0.1.10"
itertools = "0.13.0"
crop = "0.4.2"
home = "0.5.11"
bmm-lib = { path = "../../../bmm-lib" }
