[package]
name = "lovely-mac"
version = "0.1.0"
edition = "2021"

[lib]
name = "lovely"
crate-type = ["cdylib"]

[dependencies]
lovely-core = { version = "0.6.0", path = "../lovely-core" }

libc = "0.2.153"
once_cell = "1.19.0"
ctor = "0.2.7"


# [build-dependencies]
# cc = "1.2.4"
# dirs = "5.0.1"
#

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
